<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ebayflyer.KonfigurationActivity" >

    <Button
        android:id="@+id/buttonKonfigurationBestaetigen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:background="@color/orange"
        android:text="@string/bestaetigen" />

    <TextView
        android:id="@+id/textViewKonfigurationID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spinnerKonfiguration"
        android:layout_marginTop="34dp"
        android:text="@string/konfiguration_id"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewKonfigurationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewKonfigurationID"
        android:layout_marginTop="34dp"
        android:text="@string/konfiguration_name"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewKonfigurationBeschreibung"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewKonfigurationName"
        android:layout_marginTop="34dp"
        android:text="@string/konfiguration_beschreibung"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewKonfigurationPreis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewKonfigurationBeschreibung"
        android:layout_marginTop="34dp"
        android:text="@string/konfiguration_preis"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewKonfigurationBild"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textViewKonfigurationPreis"
        android:layout_marginTop="34dp"
        android:text="@string/konfiguration_bild"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextKonfigurationBeschreibungInhalt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextKonfigurationNameInhalt"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textViewKonfigurationBeschreibung"
        android:ems="10"
        android:hint="@string/konfiguration_beschreibung_beispiel" />

    <TextView
        android:id="@+id/textViewKonfigurationIDInhalt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextKonfigurationNameInhalt"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textViewKonfigurationID"
        android:text="@string/leer"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextKonfigurationPreisInhalt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextKonfigurationBeschreibungInhalt"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textViewKonfigurationPreis"
        android:ems="10"
        android:hint="@string/konfiguration_preis_beispiel" />

    <ImageView
        android:id="@+id/imageViewKonfigurationBildInhalt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextKonfigurationPreisInhalt"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textViewKonfigurationBild"
        android:src="@drawable/ebay_launcher" />

    <EditText
        android:id="@+id/editTextKonfigurationNameInhalt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textViewKonfigurationName"
        android:layout_toRightOf="@+id/textViewKonfigurationBeschreibung"
        android:ems="10"
        android:hint="@string/konfiguration_name_beispiel" />

    <Spinner
        android:id="@+id/spinnerKonfiguration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textViewKonfigurationHead"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignStart="@+id/textViewKonfigurationHead"
        android:layout_below="@+id/textViewKonfigurationHead"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textViewKonfigurationHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@color/grau"
        android:text="@string/konfiguration_produkt"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="30sp" />

    <View
        android:id="@+id/viewLinie"
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_alignLeft="@+id/spinnerKonfiguration"
        android:layout_below="@+id/spinnerKonfiguration"
        android:background="#FF909090" />

</RelativeLayout>