<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/weiss"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textViewEingabeAbbruchkriterium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/weiss"
        android:text="@string/eingabe_abbruchkriterium"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/editTextEingabeAbbruchkriterium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/weiss"
        android:ems="10"
        android:hint="@string/eingabe_abbruchkriteriumbeispiel"
        android:inputType="number"
        android:text="@string/eingabe_abbruchkriteriumbeispiel"
        android:textAlignment="center"
        android:textSize="25sp" />

    <Button
        android:id="@+id/buttonPopupBestaetigen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/orange"
        android:text="@string/bestaetigen"
        android:textSize="25sp" />

</LinearLayout>