<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/weiss"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:screenOrientation="sensor"
    tools:context="com.example.ebayflyer.MainActivity" >

    <TextView
        android:id="@+id/textViewShopIDinMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" 
        android:layout_marginStart="30dp"
        android:layout_marginTop="45dp"
        android:text="@string/shop_id"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewShopLandinMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewShopIDinMain"
        android:layout_below="@+id/textViewShopIDinMain"
        android:layout_marginTop="23dp"
        android:text="@string/land"
        android:textSize="30sp" />

    <com.example.ebayflyer.TextProgressBar
        android:id="@+id/progressBarItemsImport"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewDatenimport"
        android:layout_alignEnd="@+id/buttonErstellenFlyer"
        android:layout_alignTop="@+id/textViewDatenimport"
        android:layout_toEndOf="@+id/textViewDatenimport" 
        android:maxHeight="10dp"
        android:minHeight="10dp"  />

    <Button
        android:id="@+id/buttonErstellenFlyer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewShopIDinMain"
        android:layout_below="@+id/textViewDatenimport"
        android:layout_marginTop="33dp"
        android:background="@color/orange"
        android:gravity="center_vertical|center_horizontal"
        android:minHeight="200dp"
        android:minWidth="450dp"
        android:text="@string/erstellen_flyer"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textViewDatenimport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewShopLandinMain"
        android:layout_below="@+id/textViewShopLandinMain"
        android:layout_marginTop="26dp"
        android:text="@string/loading"
        android:textSize="30sp" 
        android:minWidth="200dp"/>

    <Button
        android:id="@+id/buttonAnzeigenFlyer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textViewShopIDinMain"
        android:layout_below="@+id/buttonErstellenFlyer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:background="@color/orange"
        android:gravity="center_vertical|center_horizontal"
        android:minHeight="200dp"
        android:minWidth="450dp"
        android:text="@string/anzeigen_flyer"
        android:textSize="30sp" />

</RelativeLayout>