<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.ebayflyer.MyFlyer" >

    <TextView
        android:id="@+id/textViewMyFlyerHead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/auswaehlen_flyer"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textSize="35sp" />

    <Button
        android:id="@+id/buttonMyFlyerZurueck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@+id/scrollViewMyFlyerInhalt"
        android:background="@color/orange"
        android:text="@string/zurueck" />

    <Spinner
        android:id="@+id/spinnerMyFlyer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textViewMyFlyerHead"
        android:layout_alignStart="@+id/textViewMyFlyerHead"
        android:layout_below="@+id/textViewMyFlyerHead"
        android:textSize="35sp" />

    <ScrollView
        android:id="@+id/scrollViewMyFlyerInhalt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonMyFlyerZurueck"
        android:layout_alignParentEnd="true"
        android:layout_alignStart="@+id/spinnerMyFlyer"
        android:layout_below="@+id/spinnerMyFlyer"
        android:fillViewport="true" >

        <TextView
            android:id="@+id/textViewMyFlyerInhalt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:text="@string/leer" />
    </ScrollView>

    <Button
        android:id="@+id/buttonFlyerAnzeige"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/spinnerMyFlyer"
        android:layout_alignRight="@+id/textViewMyFlyerHead"
        android:text="@string/buttonAnzeigen"
        android:background="@color/orange" />

</RelativeLayout>